welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def faireV(){
  baisseBrosse()
  avance()
  levebrosse()
  gauche()
  avance()
  baisseBrosse()
  recule()
  leveBrosse()
  droite()
  avance()
  baisseBrosse()
  avance()
}